--- a/App21-GenericCollections/App21-GenericCollections/App21-GenericCollections.csproj
+++ b/App21-GenericCollections/App21-GenericCollections/App21-GenericCollections.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Computer.cs" />
     <Compile Include="Employee.cs" />
+    <Compile Include="EmployeeComparer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
