--- a/Codewars7-PaginationHelper/Codewars7-PaginationHelper/Codewars7-PaginationHelper.csproj
+++ b/Codewars7-PaginationHelper/Codewars7-PaginationHelper/Codewars7-PaginationHelper.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{137BF880-EF82-459D-B91E-634B975A55C3}</ProjectGuid>
+    <ProjectGuid>{16D51C40-23B5-40C7-80BC-EE43C88B8AF7}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Codewars6_FindTheDivisors</RootNamespace>
-    <AssemblyName>Codewars6-FindTheDivisors</AssemblyName>
+    <RootNamespace>Codewars7_PaginationHelper</RootNamespace>
+    <AssemblyName>Codewars7-PaginationHelper</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PaginationHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
