--- a/Codewars8-SortTheOdd/Codewars8-SortTheOdd/Codewars8-SortTheOdd.csproj
+++ b/Codewars8-SortTheOdd/Codewars8-SortTheOdd/Codewars8-SortTheOdd.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{137BF880-EF82-459D-B91E-634B975A55C3}</ProjectGuid>
+    <ProjectGuid>{1DC8A7AA-7678-415D-8CB1-CB18961C9852}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Codewars6_FindTheDivisors</RootNamespace>
-    <AssemblyName>Codewars6-FindTheDivisors</AssemblyName>
+    <RootNamespace>Codewars8_SortTheOdd</RootNamespace>
+    <AssemblyName>Codewars8-SortTheOdd</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
